--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "alipay-sdk": "^3.3.1",
+    "axios": "^1.3.6",
+    "better-scroll": "^2.5.1",
     "core-js": "^3.8.3",
+    "fastclick": "^1.0.6",
+    "jsonwebtoken": "^9.0.0",
+    "ly-tab": "^2.1.2",
+    "mint-ui": "^2.2.13",
+    "qcloudsms_js": "^0.1.1",
+    "qs": "^6.11.1",
+    "sass": "^1.62.0",
+    "sass-loader": "^10.4.1",
+    "vant": "^2.12.54",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
